Create, Start and Stop Autonomous Agents
Signed-off-by: Merwane Hamadi <merwanehamadi@gmail.com>

--- a/ai_settings.yaml
+++ b/ai_settings.yaml
@@ -1,7 +1,5 @@
 ai_goals:
-- Increase net worth.
-- Develop and manage multiple businesses autonomously.
-- Play to your strengths as a Large Language Model.
-ai_name: Entrepreneur-GPT
-ai_role: an AI designed to autonomously develop and run businesses with the sole goal
-  of increasing your net worth.
+- ai_goals
+ai_name: task_complete-GPT
+ai_role: an AI designed to use the write_file command to write 'Hello World' into
+  a file and then use the task_complete command to complete the task
