Create, Start and Stop Autonomous Agents

--- a/.env.template
+++ b/.env.template
@@ -1,6 +1,7 @@
 PINECONE_API_KEY=your-pinecone-api-key
 PINECONE_ENV=your-pinecone-region
 OPENAI_API_KEY=your-openai-api-key
+TEMPERATURE=1
 ELEVENLABS_API_KEY=your-elevenlabs-api-key
 SMART_LLM_MODEL="gpt-4"
 FAST_LLM_MODEL="gpt-3.5-turbo"
@@ -12,3 +13,5 @@ OPENAI_API_VERSION=api-version-for-azure
 OPENAI_DEPLOYMENT_ID=deployment-id-for-azure
 IMAGE_PROVIDER=dalle
 HUGGINGFACE_API_TOKEN=
+DEBUG=False
+API_VERSION=v1
