--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,8 @@ pinecone-client==2.2.1
 redis
 orjson
 Pillow
+fastapi>=0.94.1,<0.95
+uvicorn[standard]==0.21.0
+pydantic[dotenv]==1.10.6
+yarl==1.8.2
+ujson==5.7.0
