Fixed integration tests write_file

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -13,6 +13,6 @@ services:
     restart: always
     volumes:
       # Adds current directory as volume.
-      - .:/app/
+      - .:/autogpt/
     env_file:
     - .env
