--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-scripts/keys.py
-scripts/*json
-scripts/node_modules/
-scripts/__pycache__/keys.cpython-310.pyc
+auto_gpt/keys.py
+auto_gpt/*json
+auto_gpt/node_modules/
+auto_gpt/__pycache__/keys.cpython-310.pyc
 package-lock.json
 *.pyc
 auto_gpt_workspace/*
