--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -1,4 +1,4 @@
-name: Smoke Test
+name: Benchmark
 
 on:
   push:
@@ -29,8 +29,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    - name: Generate coverage report
+    - name: benchmark
       run: |
          python benchmark/benchmark_entrepeneur_gpt_with_undecisive_user.py
-        coverage report
-        coverage xml
