--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -1,4 +1,4 @@
-name: Smoke Test
+name: Python CI
 
 on:
   push:
@@ -29,8 +29,16 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+
+    - name: Lint with flake8
+      continue-on-error: false
+      run: flake8 autogpt/ tests/ --select E303,W293,W291,W292,E305,E231,E302
+
+    - name: Run unittest tests with coverage
+      run: |
+        coverage run --source=autogpt -m unittest discover tests
+
     - name: Generate coverage report
       run: |
-         python benchmark/benchmark_entrepeneur_gpt_with_undecisive_user.py
         coverage report
         coverage xml
