--- a/.github/workflows/goal_oriented_tasks.yml
+++ b/.github/workflows/goal_oriented_tasks.yml
@@ -14,7 +14,7 @@ jobs:
 
     strategy:
       matrix:
-        python-version: [3.10]
+        python-version: ['3.10']
 
     steps:
     - name: Check out repository
