--- a/.github/workflows/benchmarks.yml
+++ b/.github/workflows/benchmarks.yml
@@ -1,31 +1,46 @@
-name: Run Benchmarks
+name: Python CI
 
 on:
-  workflow_dispatch:
+  push:
+    branches: [ master ]
+  pull_request_target:
+    branches: [ master, stable ]
+
+concurrency:
+  group: ${{ format('ci-{0}', github.head_ref && format('pr-{0}', github.event.pull_request.number) || github.sha) }}
+  cancel-in-progress: ${{ github.event_name == 'pull_request' }}
 
 jobs:
-  build:
+  test:
+    permissions:
+      pull-requests: write
+      contents: write
     runs-on: ubuntu-latest
-
-    env:
-      python-version: '3.10'
+    strategy:
+      matrix:
+        python-version: [ "3.10", "3.11" ]
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      - name: Check out pull request target branch
+        uses: actions/checkout@v3
 
-    - name: Set up Python ${{ env.python-version }}
-      uses: actions/setup-python@v4
-      with:
-        python-version: ${{ env.python-version }}
+      - name: Run unittest tests with coverage
+        run: |
+          echo "benchmarks" > xfail_reasons.log
+        env:
+          CI: true
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-
-    - name: benchmark
-      env:
-        OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-      run: |
-         python benchmark/benchmark_entrepreneur_gpt_with_undecisive_user.py
+      - name: Check xfail_reasons.log for benchmarks and post a comment
+        if: ${{ github.event_name == 'pull_request_target' }}
+        run: |
+          if grep -q "benchmarks" xfail_reasons.log; then
+            echo "benchmarks detected"
+            PR_COMMENT="We will run the benchmarks soon..."
+            PR_NUMBER=${{ github.event.pull_request.number }}
+            PR_URL="https://api.github.com/repos/${{ github.repository }}/issues/${PR_NUMBER}/comments"
+            curl -X POST \
+              -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+              -H "Content-Type: application/json" \
+              -d "{\"body\": \"$PR_COMMENT\"}" \
+              $PR_URL
+          fi
