--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,9 +3,13 @@ name: Python CI
 on:
   push:
     branches: [ master ]
-  pull_request_target:
+  pull_request:
     types: [ opened, synchronize ]
     branches: [ master ]
+  pull_request_target:
+    types: [ opened, synchronize ]
+    branches: [ opened, synchronize ]
+
 concurrency:
   group: ${{ format('ci-{0}', github.head_ref && format('pr-{0}', github.event.pull_request.number) || github.sha) }}
   cancel-in-progress: ${{ github.event_name == 'pull_request' }}
