--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,12 +3,8 @@ name: Python CI
 on:
   push:
     branches: [ master ]
-  pull_request:
-    types: [ opened, synchronize ]
-    branches: [ master ]
   pull_request_target:
     types: [ opened, synchronize ]
-    branches: [ opened, synchronize ]
 
 concurrency:
   group: ${{ format('ci-{0}', github.head_ref && format('pr-{0}', github.event.pull_request.number) || github.sha) }}
@@ -16,18 +12,17 @@ concurrency:
 
 jobs:
   test:
-    permissions:
-      pull-requests: write
-      contents: write
     runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: [ "3.10", "3.11" ]
 
     steps:
-      - name: Check out pull request HEAD
-        if: ${{ github.event_name == 'pull_request_target' }}
-        uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v2
+        with:
+          ref: ${{ github.event.pull_request.head.ref }}
+          repository: ${{ github.event.pull_request.head.repo.full_name }}
 
 
       - name: Run unittest tests with coverage
