--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -80,9 +80,9 @@ jobs:
           python -m pytest -s tests/integration/goal_oriented/test_write_file.py
         env:
           CI: true
-          PROXY: {{ secrets.PROXY }}
-          AGENT_MODE: {{ secrets.AGENT_MODE }}
-          AGENT_TYPE: {{ secrets.AGENT_TYPE }}
+          PROXY: ${{ vars.PROXY }}
+          AGENT_MODE: ${{ vars.AGENT_MODE }}
+          AGENT_TYPE: ${{ vars.AGENT_TYPE }}
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
