--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,12 +77,12 @@ jobs:
 
       - name: Run unittest tests with coverage
         run: |
-          python -m pytest -s tests/integration/goal_oriented/test_write_file.py
+          pytest -n auto --cov=autogpt --cov-report term-missing --cov-branch --cov-report xml --cov-report term
         env:
           CI: true
-          PROXY: {{ secrets.PROXY }}
-          AGENT_MODE: {{ secrets.AGENT_MODE }}
-          AGENT_TYPE: {{ secrets.AGENT_TYPE }}
+          PROXY: ${{ vars.PROXY }}
+          AGENT_MODE: ${{ vars.AGENT_MODE }}
+          AGENT_TYPE: ${{ vars.AGENT_TYPE }}
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
