--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,6 +45,10 @@ jobs:
         run: isort . --check
         if: success() || failure()
 
+      - name: Check isort formatting
+        run: mypy tests/integration/challenges # add more folders incrementally
+        if: success() || failure()
+
   test:
     permissions:
       # Gives the action the necessary permissions for publishing new
