--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -114,3 +114,22 @@ jobs:
           body: "This PR updates the cassettes."
 
 
+      - name: Check PR
+        run: |
+          echo "Pull Request Number - ${{ steps.create_pr.outputs.pull-request-number }}"
+          echo "Pull Request URL - ${{ steps.create_pr.outputs.pull-request-url }}"
+
+      - name: Comment PR URL in the current PR
+        if: steps.create_pr.outputs.pull_request_url != ''
+        uses: thollander/actions-comment-pull-request@v2
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          message: |
+            New pull request created for cassettes: [HERE](${{ steps.create_pr.outputs.pull_request_url }}). Please merge it.
+
+      - name: Fail if new PR created
+        run: |
+          if [ -n "${{ steps.create_pr.outputs.pull_request_url }}" ]; then
+            echo "A new pull request for cassettes was created, failing workflow."
+            exit 1
+          fi
