--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -107,15 +107,17 @@ jobs:
 
       - name: Create PR
         id: create_pr
+        if: ${{ env.TIMESTAMP }} != ''
         uses: peter-evans/create-pull-request@v5
         with:
           commit-message: Update cassettes
-          branch: cassette-diff-PR${{ github.event.pull_request.number }}-${{ env.TIMESTAMP }}
+          branch: cassette-diff-PR-${{ github.event.pull_request.number }}-${{ env.TIMESTAMP }}
           title: "Update cassette-diff-PR${{ github.event.pull_request.number }}-${{ env.TIMESTAMP }}"
           body: "This PR updates the cassettes. Please merge it."
 
 
       - name: Check PR
+        if: ${{ steps.create_pr.outputs.pull-request-number }} != ''
         run: |
           echo "Pull Request Number - ${{ steps.create_pr.outputs.pull-request-number }}"
           echo "Pull Request URL - ${{ steps.create_pr.outputs.pull-request-url }}"
