--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -93,9 +93,11 @@ jobs:
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
 
-      - name: Stage new files and commit
+      - name: Stage new files, commit, and check for new cassettes
         id: stage_files
         run: |
+          git fetch origin ${{ github.base_ref }}
+
           git add tests
           git diff --cached --quiet && echo "No changes to commit" && exit 0
           git config user.email "github-actions@github.com"
@@ -103,7 +105,22 @@ jobs:
           git commit -m "Add new cassettes"
           TIMESTAMP_COMMIT=$(date +%Y%m%d%H%M%S) # generate a timestamp
           echo "TIMESTAMP_COMMIT=TIMESTAMP_COMMIT" >> $GITHUB_ENV
+
+          # Check for new cassettes added in PR after the commit
+          NEW_CASSETTES_ADDED_IN_PR=$(git diff --name-only ${{ github.base_ref }}..HEAD -- 'tests/**/cassettes/**/*.yaml' | wc -l)
+          if [[ "$NEW_CASSETTES_ADDED_IN_PR" -gt 0 ]]
+          then 
+            echo "NEW_CASSETTES_ADDED_IN_PR=true" >> $GITHUB_ENV
+          else 
+            echo "NEW_CASSETTES_ADDED_IN_PR=false" >> $GITHUB_ENV
+          fi
       
+            - name: Stage new files, commit, and check for new cassettes
+
+      - name: Beat new challenges
+        if: ${{ env.NEW_CASSETTES_ADDED_IN_PR}}
+        run: |
+          echo "This step will run the challenges soon."
 
       - name: Create PR
         id: create_pr
