--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -102,7 +102,7 @@ jobs:
           git config user.name "GitHub Actions"
           git commit -m "Add new cassettes"
           TIMESTAMP_COMMIT=$(date +%Y%m%d%H%M%S) # generate a timestamp
-          echo "TIMESTAMP_COMMIT=$TIMESTAMP_COMMIT" >> $GITHUB_ENV
+          echo "TIMESTAMP_COMMIT=TIMESTAMP_COMMIT" >> $GITHUB_ENV
       
 
       - name: Create PR
