--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -107,7 +107,7 @@ jobs:
           echo "TIMESTAMP_COMMIT=TIMESTAMP_COMMIT" >> $GITHUB_ENV
 
           # Check for new cassettes added in PR after the commit
-          NEW_CASSETTES_ADDED_IN_PR=$(git diff --name-only ${{ github.base_ref }}..HEAD -- 'tests/**/cassettes/**/*.yaml' | wc -l)
+          NEW_CASSETTES_ADDED_IN_PR=$(git diff --name-only $(git merge-base ${{ github.event.pull_request.base.sha }} HEAD)..HEAD -- 'tests/**/cassettes/**/*.yaml' | wc -l)
           if [[ "$NEW_CASSETTES_ADDED_IN_PR" -gt 0 ]]
           then 
             echo "NEW_CASSETTES_ADDED_IN_PR=true" >> $GITHUB_ENV
