--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -97,7 +97,7 @@ jobs:
 
             git checkout ${{ env.MIRROR_BRANCH_SUBMODULE}}
 
-            if git merge --no-commit --no-ff ${{ github.event.pull_request.base.ref }}; then
+            if git merge --no-ff ${{ github.event.pull_request.base.ref }}; then
               echo "No merge conflict detected. We can use the cassettes previously sent. Commit: $(git rev-parse HEAD)"
             else
               echo "Merge conflict detected. This means we cannot use the cassettes previously sent, so we will take the cassettes of ${{ github.event.pull_request.base.ref }}."
