--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -293,6 +293,6 @@ jobs:
           fi
           
           if [[ "${{ env.SCORE_CHANGED }}" == "true" ]]; then
-            echo "Pipeline failed so you don't forget to merge the PR with the challenge score updated
+            echo "Pipeline failed so you don't forget to merge the PR with the challenge score updated"
             exit 1
           fi
