--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -8,7 +8,7 @@ on:
       - 'tests/integration/challenges/current_score.json'
   pull_request:
     branches: [ master, stable ]
-
+dsqdsq
 concurrency:
   group: ${{ format('docker-ci-{0}', github.head_ref && format('pr-{0}', github.event.pull_request.number) || github.sha) }}
   cancel-in-progress: ${{ github.event_name == 'pull_request' }}
