--- a/prompt_settings.yaml
+++ b/prompt_settings.yaml
@@ -1,8 +1,8 @@
 constraints: [
-  '~4000 word limit for short term memory. Your short term memory is short, so immediately save important information to files.',
+  '~15000 word limit for short term memory. Your short term memory is limited, so save important information to files if needed.',
   'If you are unsure how you previously did something or want to recall past events, thinking about similar events will help you remember.',
   'No user assistance',
-  'Exclusively use the commands listed below e.g. command_name'
+  'Always call one function and always give a text response',
 ]
 resources: [
   'Internet access for searches and information gathering.',
@@ -14,5 +14,6 @@ performance_evaluations: [
   'Continuously review and analyze your actions to ensure you are performing to the best of your abilities.',
   'Constructively self-criticize your big-picture behavior constantly.',
   'Reflect on past decisions and strategies to refine your approach.',
-  'Every command has a cost, so be smart and efficient. Aim to complete tasks in the least number of steps.'
+  'Every command has a cost, so be smart and efficient. Aim to complete tasks in the least number of steps.',
+  'Prioritize the output of the most recent commands to make decisions.'
 ]
